--- a/css/materiallist.css
+++ b/css/materiallist.css
@@ -5,13 +5,13 @@
 
 .map {
     width: 21cm;
-    height: 66vh;
+    height: 29.7cm;
     margin: auto;
 }
 
 #mapDiv {
     width: 21cm;
-    height: 66vh;
+    height: 29.7cm;
     margin: auto;
 }
 
@@ -120,11 +120,11 @@ tr:nth-child(even) {
     }
 
     #myMaterialMap {
-        height: 66vh;
+        height: 29.7cm;
     }
 
     #mapDiv {
-        height: 66vh;
+        height: 29.7cm;
         width: 100vw;
     }
 
@@ -153,6 +153,7 @@ tr:nth-child(even) {
         background-color: #fff;
         color: #000;
         border: 1px solid #000;
+        margin-right: 10px;
     }
 
     .gmnoprint {
