--- a/css/newObject.css
+++ b/css/newObject.css
@@ -35,6 +35,14 @@ canvas {
     height: auto;
 }
 
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
 .button-wrap {
     margin: 2rem 0;
 }
