added fields for specifying column name for values to get from excel document

--- a/css/newObject.css
+++ b/css/newObject.css
@@ -35,6 +35,9 @@ canvas {
     height: auto;
 }
 
+input[type="file"] {
+    display: none;
+}
 
 .custom-file-upload {
     border: 1px solid #ccc;
